--- a/formvalidation.css
+++ b/formvalidation.css
@@ -27,7 +27,7 @@ body {
   align-items: center;
   border-radius: 10px;
   border-width: 100px;
-  box-shadow: 0px 5px 30px 10px black;
+  box-shadow: 0px 5px 30px 10px blue;
 }
 form {
   width: 90%;
@@ -58,7 +58,7 @@ input:invalid {
 button {
   cursor: pointer;
   color: white;
-  background: black;
+  background: blue;
   margin-top: 5px;
   border: none;
   border-radius: 10px;
